Mycelium/include/preprocessor/MyceliumUIParser.cpp

// Generated from ./MyceliumUI.g4 by ANTLR 4.13.2


#include "MyceliumUIListener.h"
#include "MyceliumUIVisitor.h"

#include "MyceliumUIParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct MyceliumUIParserStaticData final {
  MyceliumUIParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  MyceliumUIParserStaticData(const MyceliumUIParserStaticData&) = delete;
  MyceliumUIParserStaticData(MyceliumUIParserStaticData&&) = delete;
  MyceliumUIParserStaticData& operator=(const MyceliumUIParserStaticData&) = delete;
  MyceliumUIParserStaticData& operator=(MyceliumUIParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag myceliumuiParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<MyceliumUIParserStaticData> myceliumuiParserStaticData = nullptr;

void myceliumuiParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (myceliumuiParserStaticData != nullptr) {
    return;
  }
#else
  assert(myceliumuiParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<MyceliumUIParserStaticData>(
    std::vector<std::string>{
      "program", "definition", "componentDefinition", "componentMember", 
      "propDecl", "getPropDecl", "stateBlock", "stateVarDecl", "eventDecl", 
      "paramList", "param", "styleBlock", "scriptBlock", "styleOverride", 
      "styleAssignment", "styleIdentifier", "styleValue", "selectExpression", 
      "selectCase", "defaultCase", "calculateBlock", "mainFunction", "programStatement", 
      "instanceDefinition", "instanceMember", "propAssignment", "eventHandler", 
      "functionLiteral", "expression", "primary", "argumentList", "literal", 
      "booleanLiteral", "identifier", "type", "scriptBody", "codeItem", 
      "lengthLiteral", "timeLiteral"
    },
    std::vector<std::string>{
      "", "'component'", "'prop'", "'get'", "'state'", "'event'", "'style'", 
      "'override'", "'select'", "'default'", "'script'", "'this'", "'function'", 
      "'void'", "'Main'", "'true'", "'false'", "'calculate'", "'on'", "", 
      "", "", "'px'", "'%'", "'s'", "'('", "')'", "'{'", "'}'", "';'", "':'", 
      "'\\u003F'", "'='", "','", "'.'", "'=>'", "'::'", "'-'", "'+'", "'*'", 
      "'/'", "'&&'", "'||'", "'!'", "'=='", "'!='", "'<'", "'<='", "'>'", 
      "'>='"
    },
    std::vector<std::string>{
      "", "COMPONENT", "PROP", "GET", "STATE", "EVENT", "STYLE", "OVERRIDE", 
      "SELECT", "DEFAULT", "SCRIPT", "THIS", "FUNCTION", "VOID", "MAIN", 
      "TRUE", "FALSE", "CALCULATE", "ON", "ID", "NUMBER", "STRING", "PX", 
      "PERCENT", "SECONDS", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "SEMI", 
      "COLON", "QUESTION", "ASSIGN", "COMMA", "DOT", "ARROW", "DBL_COLON", 
      "MINUS", "ADD", "MUL", "DIV", "AND", "OR", "NOT", "EQ", "NEQ", "LT", 
      "LTE", "GT", "GTE", "WS", "LINE_COMMENT", "BLOCK_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  myceliumuiParserStaticData = std::move(staticData);
}

}

MyceliumUIParser::MyceliumUIParser(TokenStream *input) : MyceliumUIParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

MyceliumUIParser::MyceliumUIParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  MyceliumUIParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *myceliumuiParserStaticData->atn, myceliumuiParserStaticData->decisionToDFA, myceliumuiParserStaticData->sharedContextCache, options);
}

MyceliumUIParser::~MyceliumUIParser() {
  delete _interpreter;
}

const atn::ATN& MyceliumUIParser::getATN() const {
  return *myceliumuiParserStaticData->atn;
}

std::string MyceliumUIParser::getGrammarFileName() const {
  return "MyceliumUI.g4";
}

const std::vector<std::string>& MyceliumUIParser::getRuleNames() const {
  return myceliumuiParserStaticData->ruleNames;
}

const dfa::Vocabulary& MyceliumUIParser::getVocabulary() const {
  return myceliumuiParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView MyceliumUIParser::getSerializedATN() const {
  return myceliumuiParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

MyceliumUIParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MyceliumUIParser::ProgramContext::EOF() {
  return getToken(MyceliumUIParser::EOF, 0);
}

std::vector<MyceliumUIParser::DefinitionContext *> MyceliumUIParser::ProgramContext::definition() {
  return getRuleContexts<MyceliumUIParser::DefinitionContext>();
}

MyceliumUIParser::DefinitionContext* MyceliumUIParser::ProgramContext::definition(size_t i) {
  return getRuleContext<MyceliumUIParser::DefinitionContext>(i);
}

MyceliumUIParser::MainFunctionContext* MyceliumUIParser::ProgramContext::mainFunction() {
  return getRuleContext<MyceliumUIParser::MainFunctionContext>(0);
}


size_t MyceliumUIParser::ProgramContext::getRuleIndex() const {
  return MyceliumUIParser::RuleProgram;
}

void MyceliumUIParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyceliumUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void MyceliumUIParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyceliumUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any MyceliumUIParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyceliumUIVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

MyceliumUIParser::ProgramContext* MyceliumUIParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, MyceliumUIParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MyceliumUIParser::COMPONENT

    || _la == MyceliumUIParser::ID) {
      setState(78);
      definition();
      setState(83);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(85);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MyceliumUIParser::VOID) {
      setState(84);
      mainFunction();
    }
    setState(87);
    match(MyceliumUIParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DefinitionContext ------------------------------------------------------------------

MyceliumUIParser::DefinitionContext::DefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MyceliumUIParser::ComponentDefinitionContext* MyceliumUIParser::DefinitionContext::componentDefinition() {
  return getRuleContext<MyceliumUIParser::ComponentDefinitionContext>(0);
}

MyceliumUIParser::StyleOverrideContext* MyceliumUIParser::DefinitionContext::styleOverride() {
  return getRuleContext<MyceliumUIParser::StyleOverrideContext>(0);
}


size_t MyceliumUIParser::DefinitionContext::getRuleIndex() const {
  return MyceliumUIParser::RuleDefinition;
}

void MyceliumUIParser::DefinitionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyceliumUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDefinition(this);
}

void MyceliumUIParser::DefinitionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyceliumUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDefinition(this);
}


std::any MyceliumUIParser::DefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyceliumUIVisitor*>(visitor))
    return parserVisitor->visitDefinition(this);
  else
    return visitor->visitChildren(this);
}

MyceliumUIParser::DefinitionContext* MyceliumUIParser::definition() {
  DefinitionContext *_localctx = _tracker.createInstance<DefinitionContext>(_ctx, getState());
  enterRule(_localctx, 2, MyceliumUIParser::RuleDefinition);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(91);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MyceliumUIParser::COMPONENT: {
        enterOuterAlt(_localctx, 1);
        setState(89);
        componentDefinition();
        break;
      }

      case MyceliumUIParser::ID: {
        enterOuterAlt(_localctx, 2);
        setState(90);
        styleOverride();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ComponentDefinitionContext ------------------------------------------------------------------

MyceliumUIParser::ComponentDefinitionContext::ComponentDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MyceliumUIParser::ComponentDefinitionContext::COMPONENT() {
  return getToken(MyceliumUIParser::COMPONENT, 0);
}

tree::TerminalNode* MyceliumUIParser::ComponentDefinitionContext::LBRACE() {
  return getToken(MyceliumUIParser::LBRACE, 0);
}

tree::TerminalNode* MyceliumUIParser::ComponentDefinitionContext::RBRACE() {
  return getToken(MyceliumUIParser::RBRACE, 0);
}

std::vector<tree::TerminalNode *> MyceliumUIParser::ComponentDefinitionContext::ID() {
  return getTokens(MyceliumUIParser::ID);
}

tree::TerminalNode* MyceliumUIParser::ComponentDefinitionContext::ID(size_t i) {
  return getToken(MyceliumUIParser::ID, i);
}

tree::TerminalNode* MyceliumUIParser::ComponentDefinitionContext::COLON() {
  return getToken(MyceliumUIParser::COLON, 0);
}

std::vector<MyceliumUIParser::ComponentMemberContext *> MyceliumUIParser::ComponentDefinitionContext::componentMember() {
  return getRuleContexts<MyceliumUIParser::ComponentMemberContext>();
}

MyceliumUIParser::ComponentMemberContext* MyceliumUIParser::ComponentDefinitionContext::componentMember(size_t i) {
  return getRuleContext<MyceliumUIParser::ComponentMemberContext>(i);
}


size_t MyceliumUIParser::ComponentDefinitionContext::getRuleIndex() const {
  return MyceliumUIParser::RuleComponentDefinition;
}

void MyceliumUIParser::ComponentDefinitionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyceliumUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComponentDefinition(this);
}

void MyceliumUIParser::ComponentDefinitionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyceliumUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComponentDefinition(this);
}


std::any MyceliumUIParser::ComponentDefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyceliumUIVisitor*>(visitor))
    return parserVisitor->visitComponentDefinition(this);
  else
    return visitor->visitChildren(this);
}

MyceliumUIParser::ComponentDefinitionContext* MyceliumUIParser::componentDefinition() {
  ComponentDefinitionContext *_localctx = _tracker.createInstance<ComponentDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 4, MyceliumUIParser::RuleComponentDefinition);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(93);
    match(MyceliumUIParser::COMPONENT);
    setState(94);
    antlrcpp::downCast<ComponentDefinitionContext *>(_localctx)->componentName = match(MyceliumUIParser::ID);
    setState(97);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MyceliumUIParser::COLON) {
      setState(95);
      match(MyceliumUIParser::COLON);
      setState(96);
      antlrcpp::downCast<ComponentDefinitionContext *>(_localctx)->baseComponentName = match(MyceliumUIParser::ID);
    }
    setState(99);
    match(MyceliumUIParser::LBRACE);
    setState(103);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 525436) != 0)) {
      setState(100);
      componentMember();
      setState(105);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(106);
    match(MyceliumUIParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ComponentMemberContext ------------------------------------------------------------------

MyceliumUIParser::ComponentMemberContext::ComponentMemberContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MyceliumUIParser::PropDeclContext* MyceliumUIParser::ComponentMemberContext::propDecl() {
  return getRuleContext<MyceliumUIParser::PropDeclContext>(0);
}

MyceliumUIParser::GetPropDeclContext* MyceliumUIParser::ComponentMemberContext::getPropDecl() {
  return getRuleContext<MyceliumUIParser::GetPropDeclContext>(0);
}

MyceliumUIParser::StateBlockContext* MyceliumUIParser::ComponentMemberContext::stateBlock() {
  return getRuleContext<MyceliumUIParser::StateBlockContext>(0);
}

MyceliumUIParser::EventDeclContext* MyceliumUIParser::ComponentMemberContext::eventDecl() {
  return getRuleContext<MyceliumUIParser::EventDeclContext>(0);
}

MyceliumUIParser::StyleBlockContext* MyceliumUIParser::ComponentMemberContext::styleBlock() {
  return getRuleContext<MyceliumUIParser::StyleBlockContext>(0);
}

MyceliumUIParser::ScriptBlockContext* MyceliumUIParser::ComponentMemberContext::scriptBlock() {
  return getRuleContext<MyceliumUIParser::ScriptBlockContext>(0);
}

MyceliumUIParser::InstanceDefinitionContext* MyceliumUIParser::ComponentMemberContext::instanceDefinition() {
  return getRuleContext<MyceliumUIParser::InstanceDefinitionContext>(0);
}


size_t MyceliumUIParser::ComponentMemberContext::getRuleIndex() const {
  return MyceliumUIParser::RuleComponentMember;
}

void MyceliumUIParser::ComponentMemberContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyceliumUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComponentMember(this);
}

void MyceliumUIParser::ComponentMemberContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyceliumUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComponentMember(this);
}


std::any MyceliumUIParser::ComponentMemberContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyceliumUIVisitor*>(visitor))
    return parserVisitor->visitComponentMember(this);
  else
    return visitor->visitChildren(this);
}

MyceliumUIParser::ComponentMemberContext* MyceliumUIParser::componentMember() {
  ComponentMemberContext *_localctx = _tracker.createInstance<ComponentMemberContext>(_ctx, getState());
  enterRule(_localctx, 6, MyceliumUIParser::RuleComponentMember);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(115);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MyceliumUIParser::PROP: {
        enterOuterAlt(_localctx, 1);
        setState(108);
        propDecl();
        break;
      }

      case MyceliumUIParser::GET: {
        enterOuterAlt(_localctx, 2);
        setState(109);
        getPropDecl();
        break;
      }

      case MyceliumUIParser::STATE: {
        enterOuterAlt(_localctx, 3);
        setState(110);
        stateBlock();
        break;
      }

      case MyceliumUIParser::EVENT: {
        enterOuterAlt(_localctx, 4);
        setState(111);
        eventDecl();
        break;
      }

      case MyceliumUIParser::STYLE: {
        enterOuterAlt(_localctx, 5);
        setState(112);
        styleBlock();
        break;
      }

      case MyceliumUIParser::SCRIPT: {
        enterOuterAlt(_localctx, 6);
        setState(113);
        scriptBlock();
        break;
      }

      case MyceliumUIParser::ID: {
        enterOuterAlt(_localctx, 7);
        setState(114);
        instanceDefinition();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PropDeclContext ------------------------------------------------------------------

MyceliumUIParser::PropDeclContext::PropDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MyceliumUIParser::PropDeclContext::PROP() {
  return getToken(MyceliumUIParser::PROP, 0);
}

MyceliumUIParser::TypeContext* MyceliumUIParser::PropDeclContext::type() {
  return getRuleContext<MyceliumUIParser::TypeContext>(0);
}

tree::TerminalNode* MyceliumUIParser::PropDeclContext::ID() {
  return getToken(MyceliumUIParser::ID, 0);
}

tree::TerminalNode* MyceliumUIParser::PropDeclContext::SEMI() {
  return getToken(MyceliumUIParser::SEMI, 0);
}

tree::TerminalNode* MyceliumUIParser::PropDeclContext::ASSIGN() {
  return getToken(MyceliumUIParser::ASSIGN, 0);
}

MyceliumUIParser::ExpressionContext* MyceliumUIParser::PropDeclContext::expression() {
  return getRuleContext<MyceliumUIParser::ExpressionContext>(0);
}


size_t MyceliumUIParser::PropDeclContext::getRuleIndex() const {
  return MyceliumUIParser::RulePropDecl;
}

void MyceliumUIParser::PropDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyceliumUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPropDecl(this);
}

void MyceliumUIParser::PropDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyceliumUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPropDecl(this);
}


std::any MyceliumUIParser::PropDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyceliumUIVisitor*>(visitor))
    return parserVisitor->visitPropDecl(this);
  else
    return visitor->visitChildren(this);
}

MyceliumUIParser::PropDeclContext* MyceliumUIParser::propDecl() {
  PropDeclContext *_localctx = _tracker.createInstance<PropDeclContext>(_ctx, getState());
  enterRule(_localctx, 8, MyceliumUIParser::RulePropDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    match(MyceliumUIParser::PROP);
    setState(118);
    type();
    setState(119);
    match(MyceliumUIParser::ID);
    setState(122);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MyceliumUIParser::ASSIGN) {
      setState(120);
      match(MyceliumUIParser::ASSIGN);
      setState(121);
      expression(0);
    }
    setState(124);
    match(MyceliumUIParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GetPropDeclContext ------------------------------------------------------------------

MyceliumUIParser::GetPropDeclContext::GetPropDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MyceliumUIParser::GetPropDeclContext::GET() {
  return getToken(MyceliumUIParser::GET, 0);
}

tree::TerminalNode* MyceliumUIParser::GetPropDeclContext::PROP() {
  return getToken(MyceliumUIParser::PROP, 0);
}

MyceliumUIParser::TypeContext* MyceliumUIParser::GetPropDeclContext::type() {
  return getRuleContext<MyceliumUIParser::TypeContext>(0);
}

tree::TerminalNode* MyceliumUIParser::GetPropDeclContext::ID() {
  return getToken(MyceliumUIParser::ID, 0);
}

tree::TerminalNode* MyceliumUIParser::GetPropDeclContext::ARROW() {
  return getToken(MyceliumUIParser::ARROW, 0);
}

MyceliumUIParser::ExpressionContext* MyceliumUIParser::GetPropDeclContext::expression() {
  return getRuleContext<MyceliumUIParser::ExpressionContext>(0);
}

tree::TerminalNode* MyceliumUIParser::GetPropDeclContext::SEMI() {
  return getToken(MyceliumUIParser::SEMI, 0);
}


size_t MyceliumUIParser::GetPropDeclContext::getRuleIndex() const {
  return MyceliumUIParser::RuleGetPropDecl;
}

void MyceliumUIParser::GetPropDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyceliumUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGetPropDecl(this);
}

void MyceliumUIParser::GetPropDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyceliumUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGetPropDecl(this);
}

